--- a/components/Home/Testimonials/components/infenetScrollCarousel/sliderCarousel.css
+++ b/components/Home/Testimonials/components/infenetScrollCarousel/sliderCarousel.css
@@ -4,29 +4,28 @@
 
 @keyframes fadeAnim {
   from {
-    transform: translateX(30%);
-
+    transform: translateX(20%);
     opacity: 0;
   }
-
+  /* 
   25% {
     transform: translateX(-10%);
     opacity: 0.1;
   }
   50% {
-    transform: translateY(8%);
+    transform: translateX(8%);
     opacity: 0.25;
   }
   75% {
-    transform: translateY(-5%);
-    opacity: 0.5;
+    transform: translateX(-5%);
+    opacity: 0.4;
   }
   90% {
     transform: translateX(3%);
-    opacity: 0.75;
-  }
+    opacity: 0.65;
+  } */
   to {
-    transform: translateY(0%);
+    transform: translateX(0%);
     opacity: 1;
   }
 }
